-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8
-
Component/s: core-svc
-
b117
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8028861 | port-stage-ppc-aix | Staffan Larsen | P4 | Resolved | Fixed | master |
When JDK-7196801 was fixed, the test wasn't removed from the ProblemList.txt.
- backported by
-
JDK-8028861 Remove java/lang/management/MemoryMXBean/LowMemoryTest2.sh from ProblemList.txt
-
- Resolved
-